Fix yellow warning message for low contrast

--- a/components/form-feedback/src/index.scss
+++ b/components/form-feedback/src/index.scss
@@ -12,7 +12,6 @@
 }
 
 .rvo-form-feedback.rvo-form-feedback--warning {
-  color: var(--rvo-form-feedback-warning-color);
   font-weight: var(--rvo-form-feedback-warning-font-weight);
 }
 
